--- a/chris/public/css/style.css
+++ b/chris/public/css/style.css
@@ -6,10 +6,29 @@ body {
   margin-left: 50px;
 }
 
+.navbar .nav-item {
+  cursor: pointer;
+}
+
+.schedule {
+  display: none;
+}
+
 .mt-lg {
   margin-top: 50px;
 }
 
 .mt-sm {
   margin-top: 20px;
+}
+
+.hover-click {
+  cursor: pointer;
+}
+
+
+
+
+#addUserForm {
+  display: none;
 }
