--- a/python-getting-started/schedule/templates/index.html
+++ b/python-getting-started/schedule/templates/index.html
@@ -38,7 +38,7 @@
 
       <div class="jumbotron mt-lg" id="addUserForm">
         <h2>Add New User</h2>
-        <form class="mt-sm">
+        <form class="mt-sm" method="post">{% csrf_token %}
           <!-- Name -->
           <div class="mt-lg"><h4>User Information</h4></div>
           <div class="form-group row">
