--- a/python-getting-started/schedule/templates/index.html
+++ b/python-getting-started/schedule/templates/index.html
@@ -67,8 +67,9 @@
           </div>
 
           <!-- Preferred Leaders -->
-          <div class="mt-lg"><h4>Preferred Leaders</h4></div>
-          <div class="form-check form-check-inline active mt-sm">
+          <div class="mt-lg preferred-leaders"><h4>Preferred Leaders</h4></div>
+          <div id="preferredLeaders"></div>
+          <!-- <div class="form-check form-check-inline active mt-sm">
             <label class="form-check-label">
               <input class="form-check-input leaderCheckbox" type="checkbox" id="mariaCheckbox" value="maria"> Maria</input>
             </label>
@@ -82,21 +83,23 @@
             <label class="form-check-label">
               <input class="form-check-input leaderCheckbox" type="checkbox" id="sidCheckbox" value="sid"> Sid</input>
             </label>
-          </div>
+          </div> -->
 
           <!-- Preferred Times -->
-          <div class=" row mt-lg mon-thurs">
+          <div id="timeBlocks">
+          <div class=" row mt-lg mon-thurs time_blocks">
             <div class="col col-3" id="monday"><h5>Monday</h5></div>
             <div class="col col-3" id="tuesday"><h5>Tuesday</h5></div>
             <div class="col col-3" id="wednesday"><h5>Wednesday</h5></div>
             <div class="col col-3" id="thursday"><h5>Thursday</h5></div>
           </div> <!-- ./row -->
 
-          <div class=" row mt-lg fri-sun">
+          <div class=" row mt-lg fri-sun time_blocks">
             <div class="col col-3" id="friday"><h5>Friday</h5></div>
             <div class="col col-3" id="saturday"><h5>Saturday</h5></div>
             <div class="col col-3" id="sunday"><h5>Sunday</h5></div>
           </div> <!-- ./row -->
+        </div>
 
         </form>
 
