--- a/python-getting-started/schedule/templates/groups.html
+++ b/python-getting-started/schedule/templates/groups.html
@@ -51,30 +51,71 @@
   <!-- Content -->
 
     <!-- Navbar -->
-    {% block navbar %}
     <nav class="navbar navbar-toggleable-sm navbar-light bg-faded">
       <button class="navbar-toggler navbar-toggler-right hover-click" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href=""><strong>Group Scheduler</strong></a>
-      <div style="margin-left: 50px;">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Users</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'schedule' %}">Schedule</a>
-          </li>
-        </ul>
-      </div>
-      <form class="form-inline ml-auto">
-        <a href="/groups/" class="btn btn-outline-info my-2 my-sm-0" style="margin-right: 10px;">My Groups</a>
+      <div class="ml-auto">
+        <button class="btn btn-outline-info my-2 my-sm-0" style="margin-right: 10px; cursor: pointer;" id="editBtn">Edit</button>
         <a href="{% url 'logout' %}" class="btn btn-outline-success my-2 my-sm-0">Log Out</a>
-      </form>
-    </nav>
-    {% endblock %} <!-- ./Navbar -->
+      </div>
+    </nav> <!-- ./Navbar -->
 
-    {% block content %}{% endblock %}
+
+      <div class="container margin-top-big">
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Delete Group</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Are you sure you want to delete this group?  Deletion will permanently erase all saved data.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                <a href="{% url 'manage_groups' %}" class="btn btn-danger" id="deleteBtn">Yes</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+          <div class="row row-offcanvas row-offcanvas-right">
+            <div class="col-12">
+
+              <!-- ------ MARK: SHORT STORIES ------ -->
+              <div class="container-fluid">
+                  <div class="row margin-top-big" style="text-align: center;">
+                      <hr style="width: 100%; margin-top: 0px;" />
+                      <div class="divider" >
+                        <h4 class="portfolio-type">My Groups</h4>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="row margin-top portfolio-selections" id="groupItems">
+
+                <div class="col-xs-6 col-md-6 col-lg-4 portfolio-item" style="background-color:  inherit;">
+                  <div class="padded-item add-group"><a href="{% url 'new_group' %}">
+                    <div class="portfolio-item-body">
+                      {% load static %} <img class="center-img" src="{% static 'img/plus_icon.png' %}"/>
+                    </div>
+                  </a></div>
+                </div>
+
+              </div><!--/row-->
+            </div><!--/.col-->
+          </div><!--/row-->
+        </div><!--/.container-->
+
+
+    {% load static %}<script src="{% static 'js/groups.js' %}"></script>
   <!-- ./Content -->
 
 <!-- {% load static %}
