fixed output schedule

--- a/python-getting-started/schedule/templates/schedule.html
+++ b/python-getting-started/schedule/templates/schedule.html
@@ -15,14 +15,9 @@
   <table class="table schedule-table" id="scheduleTable">
     <thead>
       <tr>
-        <th style="width: 30%">Time Block</th>
-        <th style="width: 10%">Monday</th>
-        <th style="width: 10%">Tuesday</th>
-        <th style="width: 10%">Wednesday</th>
-        <th style="width: 10%">Thursday</th>
-        <th style="width: 10%">Friday</th>
-        <th style="width: 10%">Saturday</th>
-        <th style="width: 10%">Sunday</th>
+        <th style="width: 40%">Time Block</th>
+        <th style="width: 30%">Leader</th>
+        <th style="width: 30%">Members</th>
       </tr>
     </thead>
     <tbody>
