--- a/python-getting-started/schedule/templates/new_group.html
+++ b/python-getting-started/schedule/templates/new_group.html
@@ -70,7 +70,7 @@
 
       <div class="container">
 
-        <form id="newGroupForm" class="form" action="newGroupScript.php" method="post">
+        <form id="newGroupForm" class="form">
         <!--form class="form" action="/action_page.php"-->
 
           <div class="container">
@@ -149,7 +149,7 @@
             <div class="form-group container"> <!--SUBMIT, CANCEL-->
               <div class="row justify-content-center">
                 <div class="col-3">
-                  <a href="{% url 'manage_groups' %}" class="btn btn-lg btn-success"
+                  <a href="#"class="btn btn-lg btn-success"
                   onclick='createNewGroup()'>Create Group</a>
                 </div>
               </div>
