--- a/python-getting-started/schedule/templates/base_generic.html
+++ b/python-getting-started/schedule/templates/base_generic.html
@@ -39,10 +39,11 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
   <link rel="stylesheet" href="{% static 'css/login.css' %}">
-  <link rel="stylesheet" href="{% static 'css/groups.css' %}">
+  <!-- <link rel="stylesheet" href="{% static 'css/groups.css' %}"> -->
   <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
 
   <script type="text/javascript" src="{{ STATIC_URL }} /static/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }} /static/js/tether.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 </head>
