--- a/python-getting-started/schedule/templates/schedule.html
+++ b/python-getting-started/schedule/templates/schedule.html
@@ -15,9 +15,11 @@
   <table class="table schedule-table" id="scheduleTable">
     <thead>
       <tr>
-        <th style="width: 40%">Time Block</th>
-        <th style="width: 30%">Leader</th>
-        <th style="width: 30%">Members</th>
+        <th style="width: 15%">Time Block</th>
+        <th style="width: 20%">Leader</th>
+        <th style="width: 25%">Members</th>
+        <th style="width: 20%; color: Silver">Only Match Leader</th>
+        <th style="width: 20%; color: Silver">Only Match Time Block</th>
       </tr>
     </thead>
     <tbody>
